<resources>
    <string name="app_name">Mobile C</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Login</string>
    <string name="tData">Data Anda</string>
    <string name="var1">Ini Pesan</string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini Hasil Password</string>
    <string name="label2">Data Login</string>
    <string name="tLogin">Login</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="IdDaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
</resources>